# flowmint

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: assets.rs  github_import.rs  import.rs  mod.rs  projects.rs  sync.rs  templates.rs
apps/desktop/tests/: assetEditorModel.test.ts  i18n.test.ts  importPageModel.test.ts  targetCapabilities.test.ts
crates/flowmint-core/: Cargo.toml
crates/flowmint-core/src/: error.rs  lib.rs
crates/flowmint-core/tests/: apply_sync_tests.rs  asset_store_tests.rs  asset_validation_tests.rs  claude_code_planner_tests.rs  codex_exporter_tests.rs  conflict_detection_tests.rs  diagnostics_tests.rs  export_capability_tests.rs  exporter_router_tests.rs  gemini_cli_exporter_tests.rs  global_sync_profile_tests.rs  global_write_safety_tests.rs  import_adoption_tests.rs  import_scanner_tests.rs  library_home_tests.rs  playbook_asset_tests.rs  (+9 more)
docs/: asset-management-and-import.md  development.md  exporters.md  manual-smoke-test.md  multi-agent-sync-feature-spec.md  multi-agent-sync-review.md  multi-agent-sync-task-plan.md  mvp-implementation-audit.md  mvp-remaining-scope.md  mvp-task-plan.md  mvp.md  public-github-import-task-plan.md  storage.md  ui.md
(+83 files in other folders)
