[workspace]
members = [
  "crates/flowmint-core",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
flowmint-core = { path = "crates/flowmint-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-build = "2"
