[package]
name = "flowmint-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "flowmint_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
flowmint-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog = "2"
